Some design cganges.

--- a/index.html
+++ b/index.html
@@ -116,27 +116,11 @@ layout: home
         <p>Here I should place something about me, a few words that can tel something about me, yup I repeated myself.</p>
       </div>
       <div class="col-sm-6">
-        <p>Here I shoudl place something interesting because this is not the ordinary static portfolia, so I mean some cool CSS & JS.</p>
+        <iframe src="http://valkirilov.github.io/easy-math/#/embeded" width="100%" height="300px" border="0"></iframe>
       </div>
     </div>
   </div>
 
-  <div class="parallax-container" data-parallax="scroll" data-bleed="3" data-natural-height="400"
-                                data-image-src="{{ "/images/parallax/background-01.jpg" | prepend: site.baseurl }}"></div>
-
-  <div id="section-contacts" class="row section contacts">
-
-    <div class="container">
-      <h1 class="center-block">Contacts</h1>
-      <hr class="hr-dot" />
-      <div class="col-sm-6">
-        <p>Contacts form here.</p>
-      </div>
-      <div class="col-sm-6">
-      <iframe src="http://valkirilov.github.io/easy-math"></iframe>
-      </div>
-    </div>
-  </div>
 
   <div class="parallax-container" data-parallax="scroll" data-bleed="5" data-natural-height="400"
                                 data-image-src="{{ "/images/parallax/background-02.jpg" | prepend: site.baseurl }}"></div>
