Some images added.

--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
 
     <div class="container-fluid">
 
-  <div class="parallax-window" data-parallax="scroll" data-bleed="3" data-natural-width="1680" data-natural-height="400"
-                              data-image-src="/blog/images/background-02.jpg"
-                              data-speed="0.5" >
+  <div class="parallax-window" data-speed="1" 
+                              data-image-src="/blog/images/parallax/vim-rotated-low.jpg">
 
     <div class="container">
       <div id="home">
@@ -159,8 +158,8 @@
     </div>
   </div>
 
-  <div class="parallax-container" data-parallax="scroll" data-bleed="5" data-natural-height="400"
-                                data-image-src="/blog/images/parallax/background-03.jpg"></div>
+  <div class="parallax-container" data-parallax="scroll" data-speed="1"
+                                data-image-src="/blog/images/parallax/background-02-low.jpg"></div>
 
   <div id="section-about" class="row section about">
     <div class="container">
@@ -168,7 +167,15 @@
       <hr class="hr-dot" />
 
       <div class="col-sm-6">
-        <p>Here I should place something about me, a few words that can tel something about me, yup I repeated myself.</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc at enim varius, vulputate turpis a, feugiat erat. Proin id sem a tortor blandit vehicula. Vivamus rhoncus tristique arcu non eleifend. Proin sit amet ultrices velit. Mauris semper lacus ligula, non tincidunt purus dignissim vitae. Fusce luctus est vitae tellus commodo lobortis. Morbi ornare nibh vel eros consequat, id congue dui scelerisque. 
+
+          Nullam placerat ut nisi sit amet accumsan. Proin condimentum, mi nec tempor elementum, ligula risus lobortis sapien, a aliquet ante sem mattis tortor. Sed posuere, diam non cursus ornare, odio nisi vulputate odio, feugiat efficitur velit urna a lorem. Duis consectetur iaculis mi, eget ornare nisl scelerisque vel. Phasellus malesuada lacus eget magna consequat, eu convallis dolor semper. Nullam at elementum augue, sed maximus neque. Nam iaculis porttitor urna cursus maximus. Etiam eros ex, viverra quis vulputate ac, aliquet et nunc.
+
+          Proin non lacinia lectus. Aliquam efficitur, mi mollis convallis elementum, magna purus iaculis elit, in commodo ex ante eu dui. Morbi iaculis cursus ex eget molestie. Cras ultricies urna a ornare varius. Donec arcu sem, porttitor efficitur elit sit amet, vehicula gravida urna. Aenean porta velit vitae mi egestas maximus. Nunc elementum sed est vulputate dignissim. Donec in fringilla turpis. Praesent accumsan imperdiet egestas.
+
+
+        </p>
       </div>
       <div class="col-sm-6">
         <iframe src="http://valkirilov.github.io/easy-math/#/embeded" width="100%" height="300px" border="0"></iframe>
@@ -177,8 +184,8 @@
   </div>
 
 
-  <div class="parallax-container" data-parallax="scroll" data-bleed="5" data-natural-height="400"
-                                data-image-src="/blog/images/parallax/background-02.jpg"></div>
+  <div class="parallax-container" data-parallax="scroll" data-speed="1"
+                                data-image-src="/blog/images/parallax/mcdonalds-low.jpg"></div>
 
 </div>
 
