Final modifications before starting

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@ layout: home
 
 <div class="container-fluid">
 
-  <div class="parallax-window" data-speed="1" 
-                              data-image-src="{{ "/images/parallax/vim-rotated-low.jpg" | prepend: site.baseurl }}">
+  <div class="container-image top">
 
     <div class="container">
       <div id="home">
@@ -103,8 +102,7 @@ layout: home
     </div>
   </div>
 
-  <div class="parallax-container" data-parallax="scroll" data-speed="1"
-                                data-image-src="{{ "/images/parallax/background-02-low.jpg" | prepend: site.baseurl }}"></div>
+  <div class="container-image projects"></div>
 
   <div id="section-about" class="row section about">
     <div class="container">
@@ -128,8 +126,6 @@ layout: home
     </div>
   </div>
 
-
-  <div class="parallax-container" data-parallax="scroll" data-speed="1"
-                                data-image-src="{{ "/images/parallax/mcdonalds-low.jpg" | prepend: site.baseurl }}"></div>
+  <div class="container-image about"></div>
 
 </div>
