--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
 ">
 
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="canonical" href="valkirilov.github.io/blog//" />
+    <link rel="stylesheet" href="/blog/css/main.css">
+    <link rel="canonical" href="valkirilov.github.io/blog//blog/" />
 
     <!-- Loading Bootstrap styles -->
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap-theme.min.css" />
+    <link rel="stylesheet" href="/blog/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/blog/bower_components/bootstrap/dist/css/bootstrap-theme.min.css" />
 
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/blog/bower_components/jquery/dist/jquery.js"></script>
 </head>
 
-  <link rel="stylesheet" href="/css/home.css">
+  <link rel="stylesheet" href="/blog/css/home.css">
 
   <body>
 
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Valentin Kirilov</a>
+          <a class="navbar-brand" href="/blog/">Valentin Kirilov</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -103,7 +103,7 @@
         <div id="project-jspres" class="col-sm-4 project flip-container jspres">
           <div class="flipper">
             <div class="front">
-              <img src="/images/portfolio/portfolio-jspres.png" />
+              <img src="/blog/images/portfolio/portfolio-jspres.png" />
             </div>
             <div class="back">
               <div class="project-header">JSpres</div>
@@ -120,7 +120,7 @@
         <div id="project-easy-math" class="col-sm-4 project flip-container easy-math">
           <div class="flipper">
             <div class="front">
-              <img src="/images/portfolio/portfolio-easy-math.png" />
+              <img src="/blog/images/portfolio/portfolio-easy-math.png" />
             </div>
             <div class="back">
               <div class="project-header">Easy-math</div>
@@ -138,7 +138,7 @@
         <div id="project-what-to-do" class="col-sm-4 project flip-container what-to-do">
           <div class="flipper">
             <div class="front">
-              <img src="/images/portfolio/portfolio-what-to-do.png" />
+              <img src="/blog/images/portfolio/portfolio-what-to-do.png" />
             </div>
             <div class="back">
               <div class="project-header">What to do?</div>
@@ -256,9 +256,9 @@
 </footer>
 
 <!-- Loading Bootstrap JS at the bottom of the page -->
-<script type="text/javascript" src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/blog/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <script src="/js/home.js"></script>
+    <script src="/blog/js/home.js"></script>
 
   </body>
 
