--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.
 ">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+
     <link rel="stylesheet" href="/blog/css/main.css">
     <link rel="canonical" href="valkirilov.github.io/blog//blog/" />
 
@@ -103,14 +105,9 @@
         <div id="project-jspres" class="col-sm-4 project flip-container jspres">
           <div class="flipper">
             <div class="front">
-              <img src="/blog/images/portfolio/portfolio-jspres.png" />
-            </div>
-            <div class="back">
-              <div class="project-header">JSpres</div>
-              <div class="project-description">
-                It’s a web tool for creating browser-based presentations with impress.js. All you need is time and imagination to make your presentation unique and awesome to impress your audience. 
-              </div>
-              <div class="project-footer"><a href="http://jspres.com" target="_blank">www.JSpres.com</a></div>
+              <a href="http://jspres.com" target="_blank">
+                <img src="/blog/images/portfolio/portfolio-jspres.png" />
+              </a>
             </div>
             <div class="clearfix"></div>
           </div>
@@ -120,15 +117,9 @@
         <div id="project-easy-math" class="col-sm-4 project flip-container easy-math">
           <div class="flipper">
             <div class="front">
-              <img src="/blog/images/portfolio/portfolio-easy-math.png" />
-            </div>
-            <div class="back">
-              <div class="project-header">Easy-math</div>
-              <div class="project-description">
-                It's a simple game that challenges your brain and speed of reaction with easy math problems. <br /><br />
-                The game has a few different modes for playing and it allows you to play different levels and difficulties.
-              </div>
-              <div class="project-footer"><a href="http://valkirilov.github.io/easy-math" target="_blank">www.valkirilov.github.io/easy-math</a></div>
+              <a href="http://valkirilov.github.io/easy-math" target="_blank">
+                <img src="/blog/images/portfolio/portfolio-easy-math.png" />
+              </a>
             </div>
             <div class="clearfix"></div>
           </div>
@@ -138,15 +129,9 @@
         <div id="project-what-to-do" class="col-sm-4 project flip-container what-to-do">
           <div class="flipper">
             <div class="front">
-              <img src="/blog/images/portfolio/portfolio-what-to-do.png" />
-            </div>
-            <div class="back">
-              <div class="project-header">What to do?</div>
-              <div class="project-description">
-                Sometimes you have a lot of things on your mind and you cannot choose only one to do. This app can help you..<br /><br />
-                What-to-do is a simple web app that helps you to choose what to do from a list with options.
-              </div>
-              <div class="project-footer"><a href="http://valkirilov.github.io/what-to-do" target="_blank">www.valkirilov.github.io/what-to-do</a></div>
+              <a href="http://valkirilov.github.io/what-to-do" target="_blank">
+                <img src="/blog/images/portfolio/portfolio-what-to-do.png" />
+              </a>
             </div>
             <div class="clearfix"></div>
           </div>
